--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section> 
             <h1></h1>
-            <p></p>
+            <p>Title</p>
             <button></button>
         </section>
         <section class="rooms"></section>
