--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Website</title>
 </head>
+
 <body>
     <header>
+        <img src="./images/logo-luxury.png" alt="logo" width="52">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="./facilities.html">Facilities</a></li>
+                <li><a href="./rooms.html">Rooms</a></li>
+                <li><a href="./contact-us.html">Contact-us</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <a href="./index.html"><img src="./images/logo-luxury.png" alt="logo" width="70"></a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="./facilities.html">Facilities</a></li>
+                <li><a href="./rooms.html">Rooms</a></li>
+                <li><a href="./contact-us.html">Contact-us</a></li>
+            </ul>
+        </nav>
 
     </header>
+
     <main>
-        <section> 
+        <section>
             <h1></h1>
             <p>Title</p>
             <button></button>
@@ -18,4 +39,5 @@
         <section class="rooms"></section>
     </main>
 </body>
+
 </html>
