--- a/index.html
+++ b/index.html
@@ -28,16 +28,86 @@
             </ul>
         </nav>
 
+
     </header>
 
     <main>
         <section>
-            <h1></h1>
-            <p>Title</p>
-            <button></button>
+            <h1><span>WELCOME TO</span>
+                LUXURY
+                <span>HOTELS</span>
+            </h1>
+
+            <p>Book your stay and enjoy Luxury
+                redefined at the most affordable rates.</p>
+            <button type="button">Book now</button>
         </section>
-        <section class="rooms"></section>
+
+
+        <section class="rooms">
+            <h2 hidden>Our rooms</h2>
+            <p>All our room types are including complementary breakfast</p>
+            <ul>
+                <li>
+                    <div>
+                        <h3>Luxury redefined</h3>
+                        <p>Our rooms are designed to transport
+                            you into an environment made for leisure.
+                            Take your mind off the day-to-day of home
+                            life and find a private paradise for yourself.</p>
+                        <button>EXPLORE</button>
+                    </div>
+                    <img src="./images/steven.jpg" alt="room" width="456">
+                </li>
+                <li>
+                    <div>
+                        <h3>
+                            Leave your worries in
+                            the sand</h3>
+                        <p>We love life at the beach. Being close
+                            to the ocean with access to endless sandy
+                            beach ensures a relaxed state of mind. It
+                            seems like time stands still watching the
+                            ocean.</p>
+                        <button>EXPLORE</button>
+                    </div>
+                    <img src="./images/andrew.jpg" alt="beach" width="456">
+                </li>
+            </ul>
+
+        </section>
+
+        <section>
+            <h2>Testimonials</h2>
+            <h3>"Calm, Serene, Retro – What a way to relax and enjoy"</h3>
+            <p>Mr. and Mrs. Baxter, UK</p>
+        </section>
     </main>
+    <footer>
+        <a href="">LUXURY<span>HOTELS</span></a>
+        <address>
+            <ul>
+                <li><a href="https://maps.app.goo.gl/krAdoH9HFBhzNAfs5" target="_blank">497 Evergreen Rd. Roseville, CA
+                        95673</a>
+
+                </li>
+                <li><a href="tel:+44345678903">+44 345 678 903</a></li>
+                <li><a href="mailto:luxury_hotels@gmail.com">luxury_hotels@gmail.com</a></li>
+            </ul>
+        </address>
+        <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Terms & Conditions</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Instagram</a></li>
+        </ul>
+
+    </footer>
+
 </body>
 
 </html>
