--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Website</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -33,9 +34,9 @@
 
     <main>
         <section>
-            <h1><span>WELCOME TO</span>
+            <h1 class="hero-title"><span class="title">WELCOME TO</span>
                 LUXURY
-                <span>HOTELS</span>
+                <span class="hotels">HOTELS</span>
             </h1>
 
             <p>Book your stay and enjoy Luxury
@@ -48,7 +49,7 @@
             <h2 hidden>Our rooms</h2>
             <p>All our room types are including complementary breakfast</p>
             <ul>
-                <li>
+                <li class="rooms-items">
                     <div>
                         <h3>Luxury redefined</h3>
                         <p>Our rooms are designed to transport
@@ -59,7 +60,7 @@
                     </div>
                     <img src="./images/steven.jpg" alt="room" width="456">
                 </li>
-                <li>
+                <li class="rooms-items">
                     <div>
                         <h3>
                             Leave your worries in
